# OpenAPI.yaml
@@ -15,6 +15,36 @@ servers:
   - url: 'http://localhost:8080'
     description: dev
 paths:
+  /order/:
+    get:
+      summary: Get Order by id
+      deprecated: false
+      description: Get order by id
+      operationId: getOrder
+      tags:
+        - store
+      parameters:
+        - name: id
+          in: query
+          description: ''
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                  descriptioon:
+                    type: string
+          headers: {}
+      security: []
   /order:
     get:
       summary: Get Orders
