# src/main/java/com/example/store/controller/OrderController.java
@@ -1,5 +1,6 @@
 package com.example.store.controller;
 
+import com.example.store.dto.CustomerDTO;
 import com.example.store.dto.OrderDTO;
 import com.example.store.entity.Order;
 import com.example.store.mapper.OrderMapper;
@@ -11,6 +12,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/order")
@@ -23,6 +25,19 @@ public class OrderController {
     @GetMapping
     public List<OrderDTO> getAllOrders() {
         return orderMapper.ordersToOrderDTOs(orderRepository.findAll());
+    }
+
+    @GetMapping("/{idString}")
+    public OrderDTO getOrder(@PathVariable("idString") String idString) {
+        try {
+            long idLong = Long.parseLong(idString);
+            return orderRepository.findById(idLong)
+                    .map(orderMapper::orderToOrderDTO)
+                    .orElse(null);
+        } catch (NumberFormatException e) {
+            System.err.println("Unknown order number: " + e.getMessage());
+        }
+        return null;
     }
 
     @PostMapping
